crates/ace-macros/tests/compile_fail/enum_id_id_pat.stderr
error: variant `Both`: `id` and `id_pat` are mutually exclusive
 --> tests/compile_fail/enum_id_id_pat.rs:3:10
  |
3 | #[derive(FrameRead)]
  |          ^^^^^^^^^
  |
  = note: this error originates in the derive macro `FrameRead` (in Nightly builds, run with -Z macro-backtrace for more info)
